Home(About-Part): HTML and CSS Code Added

--- a/Index.html
+++ b/Index.html
@@ -124,9 +124,30 @@
       </div> <!--Container End-->
     </section> <!--Services End-->
 
+    <section class="About-Expohut"> <!--About Start-->
+      <div class="Container"> <!--Container Start-->
+        <div class="About-Items">
+          <div class="About-Left">
+            <h4>about expohut</h4>
+            <span class="subtitle">an online marketplace</span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptates maxime reiciendis, magni odio quidem vitae quas distinctio illo sequi fugiat ab qui atque consequuntur debitis sapiente hic eum voluptatem suscipit autem soluta vel nam. Sed quis corrupti corporis maxime.</p>
+            <a href=""><span class="About-btn">learn more</span></a>
+          </div>
+          <nav class="About-Side-Menu">
+            <h4>quick navigation</h4>
+            <ul>
+              <li><a href=""><i class="fas fa-angle-right"></i> get startd</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> wathc demo</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> join us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div> <!--Container End-->
+    </section> <!--About End-->
+
     <section class="Top-Footer"> <!--Top Footer Start-->
       <div class="Container"> <!--Container Start-->
-
+        
       </div> <!--Container End-->
     </section> <!--Top Footer End-->
 
