--- a/Index.html
+++ b/Index.html
@@ -147,7 +147,34 @@
 
     <section class="Top-Footer"> <!--Top Footer Start-->
       <div class="Container"> <!--Container Start-->
-        
+        <div class="Top-Footer-Items">
+          <div class="Footer-Items-one">
+            <h4>expohut</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae modi facilis repellendus vero fuga sed unde. Eaque consequuntur impedit deserunt sequi fugiat. Soluta harum facere molestiae eos suscipit atque tempore?</p>
+          </div>
+          <div class="Footer-Items-Two">
+            <h4>services category</h4>
+            <ul>
+              <li><a href=""><i class="fas fa-angle-right"></i> clay decoration</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> fabric design</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> craft design</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> wooden craft</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> jewelry maker</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> stitch art</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> origami</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> art</a></li>
+            </ul>
+          </div>
+          <div class="Footer-Items-Three">
+            <h4>let's start</h4>
+            <ul>
+              <li><a href=""><i class="fas fa-angle-right"></i> get registered</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> watch demo</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> join us</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> dev contacts</a></li>
+            </ul>
+          </div>
+        </div>
       </div> <!--Container End-->
     </section> <!--Top Footer End-->
 
