Top Footer and Main Footer Code added

--- a/Index.html
+++ b/Index.html
@@ -179,7 +179,9 @@
     </section> <!--Top Footer End-->
 
     <footer class="Main-Footer"> <!--Main Footer Start-->
-
+      <div class="Container">
+        <p>copyright &copy; 2020 all right reserved <span style="color: #3aafa9;">team expohut</span></p>
+      </div>
     </footer> <!--Main Footer End-->
 
     <!--JavaScript File Linking-->
