Login and Regi validation complete

--- a/Index.html
+++ b/Index.html
@@ -32,8 +32,8 @@
           <nav class="Nav-Items">
             <ul>
               <li><a href="">about expohut</a></li>
-              <li><a href="" class="btn log">log in</a></li>
-              <li><a href="" class="btn sign">sign up</a></li>
+              <li><a href="Html/login.html" class="btn log">log in</a></li>
+              <li><a href="Html/regi.html" class="btn sign">sign up</a></li>
             </ul>
           </nav>
         </div> <!--Header Items End-->
