--- a/Index.html
+++ b/Index.html
@@ -31,9 +31,9 @@
           </div>
           <nav class="Nav-Items">
             <ul>
-              <li><a href="">about expohut</a></li>
-              <li><a href="Html/login.html" class="btn log">log in</a></li>
-              <li><a href="Html/regi.html" class="btn sign">sign up</a></li>
+              <li><a href="">এক্সপোহাট কি?</a></li>
+              <li><a href="Html/login.html" class="btn log">লগ ইন</a></li>
+              <li><a href="Html/regi.html" class="btn sign">সাইন আপ</a></li>
             </ul>
           </nav>
         </div> <!--Header Items End-->
@@ -44,13 +44,14 @@
       <div class="Container"> <!--Container Start-->
         <div class="Banner-Items"> <!--Banner Items Start-->
           <div class="Banner-Left">
-            <p>believe in yourself</p>
-            <h3>want to be an<br><span style="font-size: 45px; letter-spacing: 2px;">entrepreneur</span></h3>
-            <a href="" class="btn">join us</a>
-            <a href="" class="btn">watch demo</a>
+            <p>আস্থা রাখুন নিজের উপর,</p>
+            <h3>হতে চান উদ্যোক্তা?</h3>
+            <h5 style="color: #fff;">উদ্যোক্তা হওয়ার পূর্বশর্ত হলো নিজের মধ্যে সৃজনশীল মানসিকতা লালন করা। আমরা যদি দেখি আমাদের দেশের চারুকলার ছাত্রদের, তাহলে দেখব তাঁদের মতো এত সৃজনশীল খুব কম মানুষই হয়। নতুন কিছু সৃষ্টি করার মতো একটা সুন্দর মানসিকতা তাঁরা প্রায় প্রত্যেকেই নিজের মধ্যে লালন করেন। </h5>
+            <a href="" class="btn">জয়েন আস</a>
+            <a href="" class="btn">ওয়াচ ভিডিও</a>
           </div>
           <div class="Banner-Right">
-            <img src="Assets-Files/Attach2.png"  alt="attachment">
+            <img src="Assets-Files/bg.png"  alt="attachment">
           </div>
         </div> <!--Banner Items End-->
       </div> <!--Container End-->
@@ -59,65 +60,65 @@
     <section class="Services-Row"> <!--Services Start-->
       <div class="Container"> <!--Container Start-->
         <div class="Title">
-          <h4>explore the expohut marketplace</h4>
+          <h4>বেছে নিন আপনার পছন্দের শিল্প</h4>
           <div class="Bar"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aut delectus at laborum veritatis ratione!</p>
+          <p>“ প্রতিটি মানুষই জন্মগতভাবে একজন উদ্যোক্তা ”</p>
         </div>
         <div class="Services-Items">
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>craft design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>ক্রাফট শিল্প</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
             <a href="">details <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>art</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>চিত্র শিল্প</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
             <a href="">details <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>stitch art</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>সেলাই শিল্প</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
             <a href="">details <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>origami</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>অরিগামি</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
             <a href="">details <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>fabric design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>ফ্যাব্রিক নকশা</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
             <a href="">details <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>jewelry maker</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>হ্যান্ডমেইড জুয়েলারি</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
             <a href="">details <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>clay decoration</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>মৃত্তিকা শিল্প</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?<</p>
             <a href="">details  <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
             <div class="Foo-Bar"></div>
-            <h4>wooden craft</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, nemo?</p>
+            <h4>ওডেন ক্রাফট</h4>
+            <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
             <a href="">details <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
@@ -128,10 +129,25 @@
       <div class="Container"> <!--Container Start-->
         <div class="About-Items">
           <div class="About-Left">
-            <h4>about expohut</h4>
-            <span class="subtitle">an online marketplace</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptates maxime reiciendis, magni odio quidem vitae quas distinctio illo sequi fugiat ab qui atque consequuntur debitis sapiente hic eum voluptatem suscipit autem soluta vel nam. Sed quis corrupti corporis maxime.</p>
-            <a href=""><span class="About-btn">learn more</span></a>
+            <h4>এক্সপোহাট কি?</h4>
+            <!-- <span class="subtitle">an online marketplace</span> -->
+            <p>আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+              আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+              আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+              আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?.</p>
+            <p>আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+              আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+              আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+              আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?</p>
+              <p>আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+                আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+                আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+                আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?.</p>
+              <p>আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+                আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+                আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+                আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?</p>
+            <a href=""><span class="About-btn">আরো জানুন</span></a>
           </div>
           <nav class="About-Side-Menu">
             <h4>quick navigation</h4>
@@ -145,12 +161,26 @@
       </div> <!--Container End-->
     </section> <!--About End-->
 
+    <div class="container">
+      <section style="padding: 100px 20px; background-color: #e9f6fb;">
+        <div class="area">
+          <p>আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+            আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+            আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+            আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sit inventore quos, nihil ab nobis laborum officiis dignissimos, sapiente aspernatur magni pariatur molestias, fugit minima. Quidem ad aperiam earum aliquid unde saepe atque veritatis explicabo! Cumque tempora quisquam voluptatum consequatur autem, fugiat omnis ea earum amet sequi quam? At voluptates dolores excepturi, labore amet quod quia ratione, ab perferendis adipisci, culpa optio reprehenderit? Impedit, aspernatur corporis deleniti reiciendis quaerat eius, saepe ipsum ratione tempore similique eos animi fugit temporibus illum neque ipsa aut, sequi veniam quam enim ad sapiente pariatur! Explicabo et repudiandae fuga minima temporibus incidunt consequatur voluptatem dolor.</p>
+        </div>
+      </section>
+    </div>
+
     <section class="Top-Footer"> <!--Top Footer Start-->
       <div class="Container"> <!--Container Start-->
         <div class="Top-Footer-Items">
           <div class="Footer-Items-one">
             <h4>expohut</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae modi facilis repellendus vero fuga sed unde. Eaque consequuntur impedit deserunt sequi fugiat. Soluta harum facere molestiae eos suscipit atque tempore?</p>
+            </p>
           </div>
           <div class="Footer-Items-Two">
             <h4>services category</h4>
@@ -180,7 +210,7 @@
 
     <footer class="Main-Footer"> <!--Main Footer Start-->
       <div class="Container">
-        <p>copyright &copy; 2020 all right reserved <span style="color: #3aafa9;">team expohut</span></p>
+        <p>copyright &copy; 2020 all right reserved <span style="color: #17b978;">team expohut</span></p>
       </div>
     </footer> <!--Main Footer End-->
 
