login content updated

--- a/Html/login.html
+++ b/Html/login.html
@@ -21,12 +21,12 @@
             </div>
             <div class="rightside">
                 <div class="loginsignup-title">
-                    <h2>Log in</h2>
+                    <h2>লগ ইন</h2>
                 </div>
                 <form action="" class="form" id="form" autocomplete="off">
                     <!-- For Email -->
                     <div class="form-control">
-                        <label for="email">Email</label>
+                        <label for="email">ইমেইল</label>
                         <input type="email" placeholder="example@gmail.com" id="loginemail">
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
@@ -34,14 +34,14 @@
                     </div>
                     <!-- For Password -->
                     <div class="form-control">
-                        <label for="password">Password</label>
+                        <label for="password">পাসওয়ার্ড</label>
                         <input type="password" placeholder="Enter password" id="loginpassword" autocomplete="off">
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
                     </div>
                     <button>Submit</button>
-                    <p class="LoginRegiFooter">Don't have an account yet? <a href="../Html/regi.html" style="text-decoration: none;">Sign up</a></p>
+                    <p class="LoginRegiFooter">এখনো কোনো অ্যাকাউন্ট নেই আপনার?<a href="../Html/regi.html" style="text-decoration: none;"> সাইন আপ</a></p>
                 </form>
             </div>
         </div>
