--- a/Html/regi.html
+++ b/Html/regi.html
@@ -21,43 +21,43 @@
             </div>
             <div class="rightside">
                 <div class="loginsignup-title">
-                    <h2>Sign Up</h2>
+                    <h2>সাইন আপ</h2>
                 </div>
                 <form action="" class="form" id="form">
                     <!-- For Username -->
                     <div class="form-control">
-                        <label for="username">Username</label>
-                        <input type="text" placeholder="Joydip Paul" id="username">
+                        <label for="username">নাম</label>
+                        <input type="text" placeholder="নাম" id="username">
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
                     </div>
                     <!-- For Email -->
                     <div class="form-control">
-                        <label for="email">Email</label>
-                        <input type="text" placeholder="example@gmail.com" id="email">
+                        <label for="email">ইমেইল</label>
+                        <input type="text" placeholder="ইমেইল" id="email">
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
                     </div>
                     <!-- For Mobile Number -->
                     <div class="form-control">
-                        <label for="mobile">Mobile Number</label>
-                        <input type="number" placeholder="017345679877" id="mobile">
+                        <label for="mobile">মোবাইল  নাম্বার</label>
+                        <input type="number" placeholder="০১৭৫৯৬৯৬৯৫৭" id="mobile">
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
                     </div>
                     <!-- For Category -->
                     <div class="form-control">
-                        <label for="category">Category</label>
+                        <label for="category">ক্যাটাগরি</label>
                         <select class="category">
-                            <option value="0">Craft Artist</option>
-                            <option value="1">Artist</option>
-                            <option value="2">Stitch Artist</option>
-                            <option value="3">Juwlery Maker</option>
-                            <option value="4">Origomi</option>
-                            <option value="5">Fabric Designer</option>
+                            <option value="0">ক্রাফট শিল্প</option>
+                            <option value="1">চিত্র শিল্প</option>
+                            <option value="2">সেলাই শিল্প</option>
+                            <option value="3">হ্যান্ডমেইড জুয়েলারি</option>
+                            <option value="4">কুঠির শিল্প</option>
+                            <option value="5">মৃত্তিকা শিল্প</option>
                           </select>
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
@@ -65,16 +65,16 @@
                     </div>
                     <!-- For Address -->
                     <div class="form-control">
-                        <label for="address">Address</label>
-                        <input type="Address" placeholder="Enter Address" id="address">
+                        <label for="address">বর্তমান ঠিকানা</label>
+                        <input type="Address" placeholder="ঠিকানা" id="address">
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
                     </div>
                     <!-- For Password -->
                     <div class="form-control">
-                        <label for="password">password</label>
-                        <input type="password" placeholder="Enter password" id="password">
+                        <label for="password">পাসওয়ার্ড</label>
+                        <input type="password" placeholder="পাসওয়ার্ড" id="password">
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
@@ -87,8 +87,8 @@
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
                     </div> -->
-                    <button>Submit</button>
-                    <p class="LoginRegiFooter">Already have an account <a href="../Html/login.html"  style="text-decoration: none;">Sign up</a></p>
+                    <button>সাইন আপ</button>
+                    <p class="LoginRegiFooter">আপনার কি একটি অ্যাকাউন্ট আছে? <a href="../Html/login.html"  style="text-decoration: none;">লগ ইন</a></p>
                 </form>   
         </div>
     </div>
