--- a/Index.html
+++ b/Index.html
@@ -30,8 +30,8 @@
       <a href="#" class="logo"><img src="Assets-Files/Logo.png" alt=""></a>
       <ul>
           <li><a href="#home" onclick="toggle()">এক্সপোহাট কি?</a></li>
-          <li><a href="#about" onclick="toggle()">লগ ইন</a></li>
-          <li><a href="#portfolio" onclick="toggle()">সাইন আপ</a></li>
+          <li><a href="Html/login.html" onclick="toggle()">লগ ইন</a></li>
+          <li><a href="Html/regi.html" onclick="toggle()">সাইন আপ</a></li>
       </ul>
       <div class="toggle" onclick="toggle()"></div>
   </header>
@@ -46,7 +46,7 @@
             <a href="" class="btn">ওয়াচ ভিডিও</a>
           </div>
           <div class="Banner-Right">
-            <img src="Assets-Files/nk.jpg"  alt="attachment">
+            <img src="Assets-Files/kutir.jpg"  alt="attachment">
           </div>
         </div> <!--Banner Items End-->
       </div> <!--Container End-->
