HTML-Files Folder Added and Footer,login,sign up code updated

--- a/Index.html
+++ b/Index.html
@@ -19,29 +19,25 @@
     <!--Vue.js CDN File Linking-->
     <link rel="stylesheet" href="JavaScript-Files/vue.js">
   </head>
-  <script>
-    function toggle(){
-        var header = document.getElementById("header");
-        header.classList.toggle('active');
-    }
-</script>
+
   <body>
-    <header id="header">
-      <a href="#" class="logo"><img src="Assets-Files/Logo.png" alt=""></a>
+    <header id="header"> <!--Header Start-->
+      <a href="#" class="logo"><img src="Assets-Files/Logo.png" alt="ExpoHut Logo"></a>
       <ul>
-          <li><a href="#home" onclick="toggle()">এক্সপোহাট কি?</a></li>
-          <li><a href="Html/login.html" onclick="toggle()">লগ ইন</a></li>
-          <li><a href="Html/regi.html" onclick="toggle()">সাইন আপ</a></li>
+          <li><a href="#About" onclick="toggle()">এক্সপোহাট কি?</a></li>
+          <li><a href="HTML-Files/login.html" onclick="toggle()"><i class="fas fa-user"></i>  লগ ইন</a></li>
+          <li><a href="HTML-Files/regi.html" onclick="toggle()"><i class="fas fa-user-plus"></i>  সাইন আপ</a></li>
       </ul>
       <div class="toggle" onclick="toggle()"></div>
-  </header>
+    </header> <!--Header End-->
+
     <section class="Banner-Row"> <!--Banner Start-->
       <div class="Container"> <!--Container Start-->
         <div class="Banner-Items"> <!--Banner Items Start-->
           <div class="Banner-Left">
             <p>আস্থা রাখুন নিজের উপর,</p>
             <h3>হতে চান উদ্যোক্তা?</h3>
-            <h5 style="color: #fff;">উদ্যোক্তা হওয়ার পূর্বশর্ত হলো নিজের মধ্যে সৃজনশীল মানসিকতা লালন করা। আমরা যদি দেখি আমাদের দেশের চারুকলার ছাত্রদের, তাহলে দেখব তাঁদের মতো এত সৃজনশীল খুব কম মানুষই হয়। নতুন কিছু সৃষ্টি করার মতো একটা সুন্দর মানসিকতা তাঁরা প্রায় প্রত্যেকেই নিজের মধ্যে লালন করেন। </h5>
+            <h5 style="color: #fff; margin-top: 8px; line-height: 24px;">উদ্যোক্তা হওয়ার পূর্বশর্ত হলো নিজের মধ্যে সৃজনশীল মানসিকতা লালন করা। আমরা যদি দেখি আমাদের দেশের চারুকলার ছাত্রদের, তাহলে দেখব তাঁদের মতো এত সৃজনশীল খুব কম মানুষই হয়। নতুন কিছু সৃষ্টি করার মতো একটা সুন্দর মানসিকতা তাঁরা প্রায় প্রত্যেকেই নিজের মধ্যে লালন করেন। </h5>
             <a href="" class="btn">জয়েন আস</a>
             <a href="" class="btn">ওয়াচ ভিডিও</a>
           </div>
@@ -120,7 +116,7 @@
       </div> <!--Container End-->
     </section> <!--Services End-->
 
-    <section class="About-Expohut"> <!--About Start-->
+    <section class="About-Expohut" id="About"> <!--About Start-->
       <div class="Container"> <!--Container Start-->
         <div class="About-Items">
           <div class="About-Left">
@@ -173,25 +169,36 @@
       <div class="Container"> <!--Container Start-->
         <div class="Top-Footer-Items">
           <div class="Footer-Items-one">
-            <h4>expohut</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae modi facilis repellendus vero fuga sed unde. Eaque consequuntur impedit deserunt sequi fugiat. Soluta harum facere molestiae eos suscipit atque tempore?</p>
+            <h4>এক্সপোহাট</h4>
+            <div class="Title-Bar"></div>
+            <p>আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ? আমি তোমাকে ভালবাসি। তুমি কেমন আছ?</p>
             </p>
+            <nav class="SocialIcons">
+              <ul>
+                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li><a href=""><i class="fab fa-youtube"></i></a></li>
+              </ul>
+            </nav>
           </div>
           <div class="Footer-Items-Two">
             <h4>services category</h4>
+            <div class="Title-Bar"></div>
             <ul>
-              <li><a href=""><i class="fas fa-angle-right"></i> clay decoration</a></li>
-              <li><a href=""><i class="fas fa-angle-right"></i> fabric design</a></li>
-              <li><a href=""><i class="fas fa-angle-right"></i> craft design</a></li>
-              <li><a href=""><i class="fas fa-angle-right"></i> wooden craft</a></li>
-              <li><a href=""><i class="fas fa-angle-right"></i> jewelry maker</a></li>
-              <li><a href=""><i class="fas fa-angle-right"></i> stitch art</a></li>
-              <li><a href=""><i class="fas fa-angle-right"></i> origami</a></li>
-              <li><a href=""><i class="fas fa-angle-right"></i> art</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> ক্রাফট শিল্প</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> চিত্র শিল্প</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> সেলাই শিল্প</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> কুটির শিল্প</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> হ্যান্ডমেইড জুয়েলারি</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> ফ্যাব্রিক নকশা</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> মৃত্তিকা শিল্প</a></li>
+              <li><a href=""><i class="fas fa-angle-right"></i> ওডেন ক্রাফট</a></li>
             </ul>
           </div>
           <div class="Footer-Items-Three">
-            <h4>let's start</h4>
+            <h4>আরও জানুন</h4>
+            <div class="Title-Bar"></div>
             <ul>
               <li><a href=""><i class="fas fa-angle-right"></i> get registered</a></li>
               <li><a href=""><i class="fas fa-angle-right"></i> watch demo</a></li>
