Something change in link

--- a/HTML-Files/login.html
+++ b/HTML-Files/login.html
@@ -41,7 +41,7 @@
                         <small>Error message</small>
                     </div>
                     <button>Submit</button>
-                    <p class="LoginRegiFooter">এখনো কোনো অ্যাকাউন্ট নেই আপনার?<a href="../Html/regi.html" style="text-decoration: none;"> সাইন আপ</a></p>
+                    <p class="LoginRegiFooter">এখনো কোনো অ্যাকাউন্ট নেই আপনার?<a href="../HTML-Files/regi.html" style="text-decoration: none;"> সাইন আপ</a></p>
                 </form>
             </div>
         </div>
