--- a/HTML-Files/regi.html
+++ b/HTML-Files/regi.html
@@ -88,7 +88,7 @@
                         <small>Error message</small>
                     </div> -->
                     <button>সাইন আপ</button>
-                    <p class="LoginRegiFooter">আপনার কি একটি অ্যাকাউন্ট আছে? <a href="../Html/login.html"  style="text-decoration: none;">লগ ইন</a></p>
+                    <p class="LoginRegiFooter">আপনার কি একটি অ্যাকাউন্ট আছে? <a href="../HTML-Files/login.html"  style="text-decoration: none;">লগ ইন</a></p>
                 </form>   
         </div>
     </div>
