--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
             <div class="Foo-Bar"></div>
             <h4>ক্রাফট শিল্প</h4>
             <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?</p>
-            <a href="Html/Craft.html">details <i class="fas fa-arrow-right"></i></a>
+            <a href="HTML-Files/Craft.html">details <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
@@ -103,7 +103,7 @@
             <div class="Foo-Bar"></div>
             <h4>নান্দনিক মৃৎশিল্প</h4>
             <p>ঘরে খানিক দৃষ্টিনন্দন আলোকসজ্জা করতে চান যারা, বাতি নিজের হাতে বানিয়ে নেবেন বলে কি কখনো ভেবেছেন?<</p>
-            <a href="Html/MritShilpo.html">details  <i class="fas fa-arrow-right"></i></a>
+            <a href="HTML-Files/MritShilpo.html">details  <i class="fas fa-arrow-right"></i></a>
           </div>
           <div class="Single-Items">
             <i class="fas fa-gifts"></i>
